# finger_print

./: .gitignore  README.md  version.md
doc/: First Time Flow Concept  First Time Flow Concept.md  NukiSmartLockAPI2_3_0.md  Optimizations  UART_Fingerprint_Sensor_User_Manual_en.md  Walkthrough_P0_1_optimizations  ble_configuration.md  deep_sleep_concept.md  ha-validation-checklist.md  implementation-roadmap.md  nuki-pairing-usage.md  optimizations.md  pdf2md.py  power_management_concept.md  powermanagement.md  powermanagement.puml  rtos_tasks.md  sensor_protocol_check.md  setup.md  software-architecture.md  system-architecture.md  test_strategy.md  user_manual.md  usermanagement.md  vision.md  wiring.md
doc/adr/: led_interface.md
doc/fingerprint/: enrollment.md
doc/hw/: enclosure_macro.py  hw.md
firmware/: CMakeLists.txt  README.md  components_size.txt  partition_table.csv  sdkconfig  sdkconfig.debug.defaults  sdkconfig.defaults  sdkconfig.old  sdkconfig.release.defaults
firmware/components/sdf_app/: CMakeLists.txt
firmware/components/sdf_app/include/: sdf_app.h  sdf_lock_flow.h
firmware/components/sdf_app/src/: sdf_app.c  sdf_app_mock_linux.inc  sdf_app_test_exports.inc  sdf_lock_flow.c
firmware/components/sdf_app/test/: test_lock_flow.c  test_sdf_app.c
firmware/components/sdf_cli/: CMakeLists.txt  Kconfig  sdf_cli.c  sdf_cli_commands.c
firmware/components/sdf_cli/include/: sdf_cli.h
firmware/components/sdf_cli/test/: CMakeLists.txt  test_sdf_cli.c
firmware/components/sdf_common/: CMakeLists.txt
firmware/components/sdf_common/include/: sdf_common.h  sdf_lock_guard.h  sdf_mock_linux_gpio.h
firmware/components/sdf_common/src/: sdf_common.c  sdf_mock_linux_gpio.c
firmware/components/sdf_config/: CMakeLists.txt  Kconfig
firmware/components/sdf_config/include/: sdf_config.h
firmware/components/sdf_config/src/: sdf_config.c
firmware/components/sdf_drivers/: CMakeLists.txt
firmware/components/sdf_drivers/include/: battery.h  fingerprint.h  fingerprint_testable.h  led.h  sdf_drivers.h  sdf_drivers_testable.h  sdf_mock_linux_drivers.h
firmware/components/sdf_drivers/src/: battery.c  fingerprint.c  led.c  sdf_drivers.c  sdf_drivers_mock_linux.c
firmware/components/sdf_drivers/test/: test_driver_protocol.c  test_driver_utils.c
firmware/components/sdf_platform/: CMakeLists.txt
firmware/components/sdf_platform/include/: sdf_platform.h
firmware/components/sdf_platform/src/: sdf_platform.c
firmware/components/sdf_power/: CMakeLists.txt  Kconfig
firmware/components/sdf_power/include/: sdf_power.h
firmware/components/sdf_power/src/: sdf_power.c
firmware/components/sdf_power/test/: test_sdf_power.c
firmware/components/sdf_protocol_ble/: CMakeLists.txt  Kconfig
firmware/components/sdf_protocol_ble/include/: sdf_nuki_ble_transport.h  sdf_nuki_crypto.h  sdf_nuki_pairing.h  sdf_protocol_ble.h
firmware/components/sdf_protocol_ble/src/: sdf_nuki_ble_transport.c  sdf_nuki_crypto.c  sdf_nuki_pairing.c  sdf_protocol_ble.c  sdf_protocol_ble_mock_linux.c  sdf_protocol_ble_test_exports.inc
firmware/components/sdf_protocol_ble/test/: test_nuki_crypto.c  test_nuki_pairing.c  test_protocol_ble.c
firmware/components/sdf_protocol_zigbee/: CMakeLists.txt  Kconfig
firmware/components/sdf_protocol_zigbee/include/: sdf_protocol_zigbee.h
firmware/components/sdf_protocol_zigbee/src/: sdf_protocol_zigbee.c  sdf_protocol_zigbee_mock_linux.c
firmware/components/sdf_services/: CMakeLists.txt
firmware/components/sdf_services/include/: sdf_mock_linux_services.h  sdf_services.h  sdf_services_enrollment.h
firmware/components/sdf_services/src/: sdf_services.c  sdf_services_enrollment.c  sdf_services_internal.h  sdf_services_mock_linux.c
firmware/components/sdf_state_machines/: CMakeLists.txt
firmware/components/sdf_state_machines/include/: sdf_state_machines.h
firmware/components/sdf_state_machines/src/: sdf_state_machines.c
firmware/components/sdf_state_machines/test/: test_enrollment_sm.c
firmware/components/sdf_storage/: CMakeLists.txt
firmware/components/sdf_storage/include/: sdf_storage.h
firmware/components/sdf_storage/src/: sdf_storage.c
firmware/components/sdf_storage/test/: test_sdf_storage.c
firmware/components/sdf_tasks/: CMakeLists.txt  Kconfig
firmware/components/sdf_tasks/include/: sdf_tasks.h
firmware/components/sdf_tasks/src/: sdf_tasks.c
firmware/components/sdf_tasks/test/: test_sdf_tasks.c
firmware/main/: CMakeLists.txt  idf_component.yml  main.c
firmware/test_runner/: CMakeLists.txt  partition_table.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/test_runner/.cache/clangd/index/: test_runner_main.c.1EE62A74D20C9EB7.idx
firmware/test_runner/main/: CMakeLists.txt  test_runner_main.c
tests/: README.md
